Fixed Website is shifted

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -112,19 +112,5 @@
   --color-sidebar-ring: var(--sidebar-ring);
 }
 
-@layer base {
-  * {
-    @apply border-border outline-ring/50;
-    scrollbar-width: none; /* For Firefox */
-    -ms-overflow-style: none; /* For Internet Explorer and Edge */
-  }
-  body {
-    @apply bg-background text-foreground;
-  }
-}
 
-/* Hide scrollbar for all elements */
-::-webkit-scrollbar {
-  display: none; /* For Chrome, Safari, and Edge */
-}
 
